--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-input-limits",
+  "name": "vue-input-limited",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
